...
  final WishlistRepository wishlistRepository;
  final AuthRepository authRepository;

  @override
  Widget build(BuildContext context) {
    return MaterialApp(
      title: 'Wishiz',
      theme: AppTheme.lightTheme,
      home: _RootScreen(
        wishlistRepository: wishlistRepository,
        authRepository: authRepository,
      ),
      debugShowCheckedModeBanner: false,
...
