...
                                  shadowColor: Colors.transparent,
                                  padding: const EdgeInsets.symmetric(
                                    vertical: AppConstants.spacing4,
                                  ),
                                ),
                                child: Text(
                                  _isSubmitting ? 'Logging In...' : 'Log In',
                                  style: Theme.of(context).textTheme.titleSmall,
                                ),
                              ),
                            ),
                            const SizedBox(height: AppConstants.spacing4),
                            TextButton(
...
